--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 body{
     display: grid;
     grid-template-areas: 'nav' 'header' 'aside' 'section' 'div' 'footer';
-    grid-template-rows: 8px 500px 25vh 30vh 30vh 30vh;
+    grid-template-rows: 8px 550px 50vh 50vh 50vh 50vh;
     margin: 0;
 }
 nav{
     grid-area: nav;
-    background-color: green;
+    background-color: #31cb71;
 }
 header{
     background-image: url(img/banner.png);
-    background-size: 100%;
     grid-area: header;
     color: white;
     display: flex;
@@ -23,14 +22,14 @@ header div{
 }
 header div h1{
     font-family: 'Pacifico', cursive;
-    font-size: 26pt;
+    font-size: 34pt;
 }
 header div h3{
     font-family: 'Roboto', sans-serif;
 }
 header div div{
     height: 300px;
-    width: 100%;
+    width: 85%;
 }
 header div div div{
     display: flex;
@@ -47,7 +46,7 @@ header div div div a{
     justify-content: center;
 }
 header div div div a:hover{
-    background-color: green;
+    background-color: #31cb71;
     transition: 0.6s;
 }
 header div div div a img{
@@ -63,11 +62,25 @@ header div img{
     height: 450px;
 }
 header div h1 span{
-    color: green;
+    color: #31cb71;
 }
 aside{
     background-color: orange;
     grid-area: aside;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+aside div{
+    background-color: #31cb71;
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    width: 90%;
+}
+aside div header, aside div section, aside div footer{
+    background: none;
+    width: 30%;
 }
 section{
     background-color: red;
